# JC3248W535_lvgl_test-main

./: platformio.ini
include/: lv_conf.h
src/: battery.cpp  battery.h  bike_config.h  bike_data.cpp  bike_data.h  bike_math.h  ble_bridge.cpp  ble_bridge.h  buttons.cpp  buttons.h  dashboard.cpp  dashboard.h  dispcfg.h  ft85bd_pins.h  ft85bd_uart.cpp  ft85bd_uart.h  main.cpp  sd_config.cpp  sd_config.h  speed_sensor.cpp  speed_sensor.h  storage.cpp  storage.h  ui_adapter.cpp  ui_adapter.h
src/ui/: CMakeLists.txt  filelist.txt  lv_i18n.c  lv_i18n.h  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp_hook.c
src/ui/fonts/: ui_font_Moscow14.c  ui_font_Moscow16.c  ui_font_Moscow24.c  ui_font_Moscow28.c
src/ui/images/: ui_img_1559759506.c  ui_img_1698700558.c  ui_img_1930944701.c  ui_img_258024724.c  ui_img_963419959.c  ui_img_battt_png.c  ui_img_bkgrnd5_png.c  ui_img_cruise_png.c  ui_img_speedometer_png.c
src/ui/screens/: ui_infoScreen.c  ui_infoScreen.h  ui_mainScreen.c  ui_mainScreen.h  ui_scrMain.c  ui_scrMain.h  ui_scrSettings.c  ui_scrSettings.h
